--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body style="margin: 0; overflow: hidden;">
   <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
     <!-- Marker untuk kapal -->
-    <a-marker type="pattern" url="pattern-kapallau.patt">
+    <a-marker type="pattern" url="pattern-mobil.patt">
       <a-entity 
-        gltf-model="url(sailing_ship_model.glb)"
+        gltf-model="url(car_mobil.glb)"
         scale="0.3 0.3 0.3"
         position="0 -10 0"       
         animation="property: rotation; to: 0 360 0; loop: true; dur: 15000; easing: linear">
