--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Marker untuk kapal -->
     <a-marker type="pattern" url="pattern-mobil.patt">
       <a-entity 
-        gltf-model="url(car_mobil.glb)"
+        gltf-model="url(car_model.glb)"
         scale="0.3 0.3 0.3"
         position="0 -10 0"       
         animation="property: rotation; to: 0 360 0; loop: true; dur: 15000; easing: linear">
