--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-</head>
-<body style="margin: 0; overflow: hidden;">
-  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-    <!-- Marker untuk kapal -->
-    <a-marker type="pattern" url="pattern-mobil.patt">
-      <a-entity 
-        gltf-model="url(car_model.glb)"
-        scale="0.3 0.3 0.3"
-        position="0 -10 0"       
-        animation="property: rotation; to: 0 360 0; loop: true; dur: 15000; easing: linear">
-      </a-entity>
-      <!-- <a-text value="Kapal Nabi Nuh" position="0 0 0" color="black"></a-text> -->
-    </a-marker>
-    <a-entity camera></a-entity>
-  </a-scene>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>AR Mobil dengan Gambar PNG</title>
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+  </head>
+  <body style="margin: 0; overflow: hidden;">
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+      
+      <!-- Marker menggunakan gambar PNG -->
+      <a-marker type="image" url="mobil-marker.png">
+        <a-entity 
+          gltf-model="url(car_model.glb)"
+          scale="0.3 0.3 0.3"
+          position="0 0 0"
+          animation="property: rotation; to: 0 360 0; loop: true; dur: 15000; easing: linear">
+        </a-entity>
+      </a-marker>
+
+      <!-- Kamera AR -->
+      <a-entity camera></a-entity>
+
+    </a-scene>
+  </body>
 </html>
