--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
       
       <!-- Marker menggunakan gambar PNG -->
-      <a-marker type="image" url="mobil-marker.png">
+      <a-marker type="image" url="pattern-mobil.png">
         <a-entity 
           gltf-model="url(car_model.glb)"
           scale="0.3 0.3 0.3"
